# common-pipeline-docker

./: .dockerignore  .gitignore  Dockerfile  Gruntfile.js  NOTES.md  README.md  package.json  pyproject.toml  tasks.py  tsconfig.json
.github/workflows/: deploy.yml  pull_request.yml
scripts/: deploy  git-helper  version
src/: deploy.ts
vajeh_pipeline_docker/: __init__.py  bump_version.py  deploy.py  git_helper.py  git_util.py  mycmd.py  version.py
